--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install deps
         working-directory: web-static
-        run: npm ci
+        run: npm install
 
       - name: Build
         working-directory: web-static
