--- a/web-static/package.json
+++ b/web-static/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.0",
     "chart.js": "^4.4.0",
+    "chartjs-chart-matrix": "^3.0.0",
     "primevue": "^4.2.0",
     "vue": "^3.4.0",
     "vue-router": "^4.3.0"
