prebuild&predev阶段持久化统计数据+周期数据更新

--- a/web-static/package.json
+++ b/web-static/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predev": "npm run generate-stats",
+    "generate-stats": "node scripts/generate-stats.js",
+    "prebuild": "npm run generate-stats",
     "build": "vite build",
     "preview": "vite preview"
   },
